--- a/app/views/registers/_register.html.erb
+++ b/app/views/registers/_register.html.erb
@@ -8,7 +8,7 @@
 
 <% if register.register_images.length > 0 %>
   <div class='register_image span1'>
-    <a href="<%= config.path_prefix %>/<%= register.register_images[0].filepath %>" target="_blank"><img src='<%= config.path_prefix %>/<%= register.register_images[0].filepath %>' width='100' /></a>
+    <a href="/<%= register.register_images[0].filepath %>" target="_blank"><img src='/<%= register.register_images[0].filepath %>' width='100' /></a>
   </div>
 
   <div class='register_data span5'>
