--- a/app/views/registers/edit.html.erb
+++ b/app/views/registers/edit.html.erb
@@ -80,10 +80,10 @@ $(function() {
 </script>
 
   <div id="ri_resizer">
-    <img id="register_image" data-src="<%= config.path_prefix %>/<%= @register.register_images[0].filepath %>" src="<%= config.path_prefix %>/<%= @register.register_images[0].filepath %>" />
+    <img id="register_image" data-src="/<%= @register.register_images[0].filepath %>" src="/<%= @register.register_images[0].filepath %>" />
   <% unless @register.register_images[1].nil? %>
     <% if File.exist? "#{Cfrp::Application.config.root}/public/#{@register.register_images[1].filepath}" %>
-    <img id="register_image2" src="<%= config.path_prefix %>/<%= @register.register_images[1].filepath %>" />
+    <img id="register_image2" src="/<%= @register.register_images[1].filepath %>" />
     <% end %>
   <% end %>
   </div>
