--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
   <% if @register.register_image != nil %>
-  <div id='register_image'><a href="<%= config.path_prefix %>/<%= @register.register_image.filepath %>" target="_blank"><img src='<%= config.path_prefix %>/<%= @register.register_image.filepath %>' width='100' /></a></div>
+  <div id='register_image'><a href="/<%= @register.register_image.filepath %>" target="_blank"><img src='/<%= @register.register_image.filepath %>' width='100' /></a></div>
   <% end %>
 
 <p>
