--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,21 +1,22 @@
 @import "twitter/bootstrap/bootstrap";
-body { padding-top: 0px; }
-
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
-@iconSpritePath: '/images/twitter/bootstrap/glyphicons-halflings.png';
-@iconWhiteSpritePath: '/images/twitter/bootstrap/glyphicons-halflings-white.png';
+@iconSpritePath: image-url("twitter/bootstrap/glyphicons-halflings.png");
+@iconWhiteSpritePath: image-url("twitter/bootstrap/glyphicons-halflings-white.png");
 
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
-//@fontAwesomeEotPath: asset-path('fontawesome-webfont.eot');
-//@fontAwesomeWoffPath: asset-path('fontawesome-webfont.woff');
-//@fontAwesomeTtfPath: asset-path('fontawesome-webfont.ttf');
-//@fontAwesomeSvgzPath: asset-path('fontawesome-webfont.svgz');
-//@fontAwesomeSvgPath: asset-path('fontawesome-webfont.svg');
+@fontAwesomeEotPath: asset-url("fontawesome-webfont.eot");
+@fontAwesomeEotPath_iefix: asset-url("fontawesome-webfont.eot?#iefix");
+@fontAwesomeWoffPath: asset-url("fontawesome-webfont.woff");
+@fontAwesomeTtfPath: asset-url("fontawesome-webfont.ttf");
+@fontAwesomeSvgPath: asset-url("fontawesome-webfont.svg#fontawesomeregular");
 
 // Font Awesome
-// @import "fontawesome";
+@import "fontawesome/font-awesome";
+
+// Glyphicons
+//@import "twitter/bootstrap/sprites.less";
 
 // Your custom LESS stylesheets goes here
 //
@@ -23,16 +24,7 @@ body { padding-top: 0px; }
 // you may use and inherit here
 //
 // If you'd like to override bootstrap's own variables, you can do so here as well
-// See http://twitter.github.com/bootstrap/less.html for their names and documentation
+// See http://twitter.github.com/bootstrap/customize.html#variables for their names and documentation
 //
 // Example:
 // @linkColor: #ff0000;
-
-@navbarLinkColorActive: #87cefa;
-
-// @gridColumns: 15;
-// @gridColumnWidth: 50px;
-// @gridGutterWidth: 14px;
-
-@baseFontSize: 16px;
-@baseFontFamily: "Georgia";
