--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -202,7 +202,7 @@ $(function() {
   <div class="control-group">
     <%= rp.label :ordering, :class => 'control-label' %>
     <div class="controls">
-    <%= rp.text_field :ordering, :class => 'form-inline span6 play-ordering' %>
+    <%= rp.text_field :ordering, :class => 'form-inline span1 play-ordering' %>
     </div>
   </div>
 
@@ -252,25 +252,25 @@ $(function() {
   <div class="control-group">
     <label class="control-label">Création?</label>
     <div class="controls form-inline">
-      <%= rp.check_box :firstrun, :class => 'form-inline span6' %>
+      <%= rp.check_box :firstrun, :class => 'form-inline' %>
       <label>Numéro de création</label>
-      <%= rp.text_field :firstrun_perfnum, :class => 'span6' %>
+      <%= rp.text_field :firstrun_perfnum, :class => 'span1' %>
     </div>
   </div>
 
   <div class="control-group">
     <label class="control-label">Reprise Importante?</label>
     <div class="controls form-inline">
-      <%= rp.check_box :reprise, :class => 'form-inline span6' %>
+      <%= rp.check_box :reprise, :class => 'form-inline' %>
       <label>Numéro de reprise</label>
-      <%= rp.text_field :reprise_perfnum, :class => 'span6' %>
+      <%= rp.text_field :reprise_perfnum, :class => 'span1' %>
     </div>
   </div>
 
   <div class="control-group">
     <%= rp.label :free_access, 'Gratuit', :class => 'control-label' %>
     <div class="controls">
-      <%= rp.check_box :free_access, :class => 'form-inline span6' %>
+      <%= rp.check_box :free_access, :class => 'form-inline' %>
     </div>
   </div>
 
